fix modal window on mobile and tablet versions

--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -116,7 +116,7 @@ h1 {
 
   & > li > .title {
     text-align: center;
-    @media screen and (min-width: $bp-mobile) and (max-width: $bp-laptop) {
+    @media screen and (min-width: $bp-tablet) {
       text-align: left;
     }
   }
